# tree-sitter-markdown

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  Package.resolved  Package.swift  README.md  binding.gyp  go.mod  grammar.js  log.html  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  node.js.yml  publish.yml
bindings/: .gitignore
bindings/c/: tree-sitter-markdown.h  tree-sitter-markdown.pc.in
bindings/go/: binding.go  binding_test.go  go.mod  markdown.go  markdown_inline.go
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js  inline.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_markdown/: __init__.py  __init__.pyi  binding.c  parser.py
bindings/rust/: benchmark.rs  build.rs  lib.rs  parser.rs
bindings/swift/: .gitignore  README.md
bindings/swift/TreeSitterMarkdownTests/: TreeSitterMarkdownTests.swift
common/: common.js  common.mak  grammar.js
corpus/: issues.txt  spec.txt
queries/: injections.scm
scripts/: build.js  test.js
src/: grammar.json  node-types.json  parser.c
tree-sitter-markdown/: CMakeLists.txt  Makefile  grammar.js  package.json
tree-sitter-markdown-inline/: CMakeLists.txt  Makefile  grammar.js  package.json
tree-sitter-markdown-inline/bindings/c/: tree-sitter-markdown-inline.h  tree-sitter-markdown-inline.pc.in
tree-sitter-markdown-inline/corpus/: extension_latex.txt  extension_wikilink.txt  issues.txt  spec.txt  tags.txt
tree-sitter-markdown-inline/corpus-failing/: spec.txt
tree-sitter-markdown-inline/queries/: highlights.scm
tree-sitter-markdown-inline/src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
tree-sitter-markdown-inline/test/corpus/: extension_latex.txt  failing.txt  issues.txt  spec.txt
tree-sitter-markdown/bindings/c/: tree-sitter-markdown.pc.in
tree-sitter-markdown/bindings/swift/TreeSitterMarkdown/: markdown.h
tree-sitter-markdown/bindings/swift/TreeSitterMarkdownQueries/: Query.swift
tree-sitter-markdown/corpus/: extension_task_list.txt  spec.txt
tree-sitter-markdown/queries/: injections.scm
tree-sitter-markdown/src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
tree-sitter-markdown/test/corpus/: extension_pipe_table.txt  failing.txt  issues.txt  spec.txt
