[package]
name = "tree-sitter-md"
description = "Markdown grammar for tree-sitter"
version = "0.2.3"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "markdown"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-markdown"
authors = ["MDeiml"]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "tree-sitter-markdown/src/*",
  "tree-sitter-markdown-inline/src/*",
  "tree-sitter-markdown/grammar.js",
  "tree-sitter-markdown-inline/grammar.js",
  "tree-sitter-markdown/queries/*",
  "tree-sitter-markdown-inline/queries/*",
  "common/grammar.js",
  "common/html_entities.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.21.0"

[build-dependencies]
cc = "^1.0.89"

[[bin]]
name = "benchmark"
path = "bindings/rust/benchmark.rs"

[profile.release]
debug = true
