[package]
name = "tree-sitter-md"
description = "Markdown grammar for tree-sitter"
version = "0.4.0"
authors = ["MDeiml"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "markdown"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-markdown"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "tree-sitter-markdown/src/*",
  "tree-sitter-markdown-inline/src/*",
  "tree-sitter-markdown/grammar.js",
  "tree-sitter-markdown-inline/grammar.js",
  "tree-sitter-markdown/queries/*",
  "tree-sitter-markdown-inline/queries/*",
  "common/grammar.js",
  "common/html_entities.json",
]

[features]
parser = ["tree-sitter"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"
tree-sitter = { version = "0.24", optional = true }

[dev-dependencies]
tree-sitter = "0.24.3"

[build-dependencies]
cc = "1.1.22"

[[bin]]
name = "benchmark"
path = "bindings/rust/benchmark.rs"
required-features = ["parser"]

[profile.release]
debug = true

[package.metadata.docs.rs]
features = ["parser"]
rustdoc-args = ["--cfg", "docsrs"]
